--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,10 +10,28 @@ on:
     types: [trigger-workflow]
 
 jobs:
+  prepare:
+    name: Prepare builds
+    runs-on: ubuntu-latest
+
+    outputs:
+      templatefile: ${{ steps.templatefile.outputs.templatefile }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Find template file
+        id: templatefile
+        run: |
+          templatefile=$(find . -name "*.hcl" | head -1)
+          echo "templatefile=$templatefile" >> $GITHUB_OUTPUTS
+
   build-lab:
     name: Build images in lab
     environment: lab
     runs-on: ubuntu-latest
+    needs: prepare
 
     if: |
       ( github.event_name == 'push' )
@@ -34,7 +52,7 @@ jobs:
       - name: Build image
         uses: ./.github/actions/build-image
         with:
-          template: fedora-coreos.pkr.hcl
+          template: ${{ needs.prepare.outputs.templatefile }}
           token: ${{ secrets.HCLOUD_TOKEN }}
           build-identifier: github-actions-${{ github.run_number }}
 
@@ -42,6 +60,7 @@ jobs:
     name: Build images in home (private environment)
     environment: home
     runs-on: ubuntu-latest
+    needs: prepare
 
     if: |
       ( github.event_name == 'push' && (github.ref_name == 'dev' || github.ref_name == 'home' || github.ref_name == 'main'))
@@ -62,7 +81,7 @@ jobs:
       - name: Build image
         uses: ./.github/actions/build-image
         with:
-          template: fedora-coreos.pkr.hcl
+          template: ${{ needs.prepare.outputs.templatefile }}
           token: ${{ secrets.HCLOUD_TOKEN }}
           build-identifier: github-actions-${{ github.run_number }}
 
@@ -70,6 +89,8 @@ jobs:
     name: Build images in production
     environment: public
     runs-on: ubuntu-latest
+    needs: prepare
+
     if: |
       ( github.event_name == 'push' && github.ref_name == 'main' )
       || ( github.event.name == 'repository_dispatch' &&  github.event.action == 'trigger-workflow' && github.event.client_payload.tag_name == 'main' )
@@ -89,7 +110,7 @@ jobs:
       - name: Build image
         uses: ./.github/actions/build-image
         with:
-          template: fedora-coreos.pkr.hcl
+          template: ${{ needs.prepare.outputs.templatefile }}
           token: ${{ secrets.HCLOUD_TOKEN }}
           build-identifier: github-actions-${{ github.run_number }}
 
