--- a/.github/workflows/build-lab.yaml
+++ b/.github/workflows/build-lab.yaml
@@ -18,7 +18,7 @@ jobs:
     environment: lab
     runs-on: ubuntu-latest
 
-    if: github.event.schedule != "0 0 * * *"
+    if: github.event.schedule != '0 0 * * *'
 
     steps:
       - name: Checkout
