--- a/.github/actions/build-image/action.yml
+++ b/.github/actions/build-image/action.yml
@@ -16,6 +16,13 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: Prepare
+      shell: bash
+      run: |
+        image_name="$(echo $GITHUB_REPOSITORY | cut -d/ -f2 | sed -E 's/packer-//g')"
+        image_tag=${{ github.ref_name }}
+        echo "SNAPSHOT_NAME=$image_name-$image_tag" >> $GITHUB_ENV
+
     - name: Setup `packer`
       uses: hashicorp/setup-packer@main
       id: setup
@@ -42,7 +49,7 @@ runs:
         packer validate \
           -var hcloud_token=${{ inputs.token }} \
           -var build_identifier=${{ inputs.build-identifier }} \
-          -var snapshot_name=$(echo $GITHUB_REPOSITORY | cut -d/ -f2)-${{ github.ref_name }} \
+          -var snapshot_name="${SNAPSHOT_NAME}" \
           $additional_vars \
           ${{ inputs.template }}
 
@@ -64,6 +71,6 @@ runs:
           -var build_identifier=${{ inputs.build-identifier }} \
           -var github_branch=${{ github.ref_name }} \
           -var version=latest \
-          -var snapshot_name=$(echo $GITHUB_REPOSITORY | cut -d/ -f2)-${{ github.ref_name }} \
+          -var snapshot_name="${SNAPSHOT_NAME}" \
           $additional_vars \
           ${{ inputs.template }}
