--- a/.github/actions/build-image/action.yml
+++ b/.github/actions/build-image/action.yml
@@ -43,6 +43,7 @@ runs:
         additional_vars=""
         for key in $(echo ${{ toJson(inputs.trigger-payload) }} | jq -r 'keys[]'); do
           value=$(echo ${{ toJson(inputs.trigger-payload) }} | jq -r ".[$key]")
+          echo "Adding variable $key=$value"
           additional_vars+=" -var $key=$value"
         done
 
