--- a/.github/actions/build-image/action.yml
+++ b/.github/actions/build-image/action.yml
@@ -38,11 +38,13 @@ runs:
     - name: Run `packer validate`
       id: validate
       shell: bash
+      env:
+        PAYLOAD: ${{ inputs.trigger-payload }}
       run: |
         echo "Processing payload..."
         additional_vars=""
-        for key in $(echo ${{ inputs.trigger-payload }} | jq -r 'keys[]'); do
-          value=$(echo ${{ inputs.trigger-payload }} | jq -r ".[$key]")
+        for key in $(echo "${PAYLOAD}" | jq -r 'keys[]'); do
+          value=$(echo "${PAYLOAD}" | jq -r ".[$key]")
           echo "Adding variable $key=$value"
           additional_vars+=" -var $key=$value"
         done
@@ -56,11 +58,13 @@ runs:
 
     - name: Run `packer build`
       shell: bash
+      env:
+        PAYLOAD: ${{ inputs.trigger-payload }}
       run: |
         echo "Processing payload..."
         additional_vars=""
-        for key in $(echo ${{ toJson(inputs.trigger-payload) }} | jq -r 'keys[]'); do
-          value=$(echo ${{ toJson(inputs.trigger-payload) }} | jq -r ".[$key]")
+        for key in $(echo "${PAYLOAD}" | jq -r 'keys[]'); do
+          value=$(echo "${PAYLOAD}" | jq -r ".[$key]")
           additional_vars+=" -var $key=$value"
         done
 
