--- a/.github/actions/build-image/action.yml
+++ b/.github/actions/build-image/action.yml
@@ -38,16 +38,12 @@ runs:
     - name: Run `packer validate`
       id: validate
       shell: bash
-      env:
-        PAYLOAD: ${{ toJson(inputs.trigger-payload) }}
       run: |
         echo "Processing payload..."
-        additional_vars=""
-        for key in $(echo "${PAYLOAD}" | jq -r 'keys[]'); do
-          value=$(echo "${PAYLOAD}" | jq -r ".[$key]")
-          echo "Adding variable $key=$value"
-          additional_vars+=" -var $key=$value"
-        done
+        payload='${{ inputs.trigger-payload }}'
+        additional_vars=$(echo "$payload" | jq -r 'to_entries | map("-var \(.key)=\(.value)") | join(" ")')
+
+        echo "Adding additional settings: ${additional_vars}"
 
         packer validate \
           -var hcloud_token=${{ inputs.token }} \
@@ -58,15 +54,12 @@ runs:
 
     - name: Run `packer build`
       shell: bash
-      env:
-        PAYLOAD: ${{ toJson(inputs.trigger-payload) }}
       run: |
         echo "Processing payload..."
-        additional_vars=""
-        for key in $(echo "${PAYLOAD}" | jq -r 'keys[]'); do
-          value=$(echo "${PAYLOAD}" | jq -r ".[$key]")
-          additional_vars+=" -var $key=$value"
-        done
+        payload='${{ inputs.trigger-payload }}'
+        additional_vars=$(echo "$payload" | jq -r 'to_entries | map("-var \(.key)=\(.value)") | join(" ")')
+
+        echo "Adding additional settings: ${additional_vars}"
 
         packer build \
           -color=false \
