--- a/.github/workflows/build-lab.yaml
+++ b/.github/workflows/build-lab.yaml
@@ -20,6 +20,10 @@ jobs:
 
     if: github.event.schedule != '0 0 * * *'
 
+    concurrency:
+      group: lab
+      cancel-in-progress: false
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
